add pandas pyarrow

--- a/week3_bq/Pipfile
+++ b/week3_bq/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 prefect = "*"
 prefect-gcp = {version = "==0.2.4", extras = ["cloud_storage"]}
 pyarrow = "*"
+pandas = "*"
 
 [dev-packages]
 
